--- a/etc/prometheus.yml
+++ b/etc/prometheus.yml
@@ -10,4 +10,4 @@ scrape_configs:
   - job_name: 'app'
     scrape_interval: 5s
     static_configs:
-      - targets: ['app:8080']
+      - targets: ['nutrack:8080']
