--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,38 @@ services:
     depends_on:
       - prometheus
 
-  nutrack:
-    build: .
+  postgres:
+    image: postgres:11.1-alpine
+    restart: always
     ports:
-      - 8080:8080
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: psql
+      POSTGRES_DB: nutrack
 
+  postgres-exporter:
+    image: wrouesnel/postgres_exporter:v0.5.1
+    restart: always
+    environment:
+      DATA_SOURCE_NAME: "postgresql://postgres:psql@postgres:5432/nutrack?sslmode=disable"
+
+  # nginx:
+  #   image: nginx:1.17.3-alpine
+  #   restart: always
+  #   ports:
+  #     - 80:80
+
+  # nutrack:
+  #   image: clojure:openjdk-8-tools-deps
+  #   depends_on:
+  #     - postgres
+  #   ports:
+  #     - 8080:8080
+
+  # build the server as a docker image - production edition
+  # nutrack:
+  #   build: .
+  #   depends_on:
+  #     - postgres
+  #   ports:
+  #     - 8080:8080
